--- a/Styles.css
+++ b/Styles.css
@@ -69,3 +69,44 @@ h1 {
     .btn:nth-child(2) {
         background-color: rgb(126,2,195);
     }
+    /***Reservacion*/
+
+
+.container-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+    .label{
+
+        display:block;
+        font-size:1rem;
+        margin-block:.5rem;
+    }
+.input {
+    width:100%;
+    padding:.5rem .8rem;
+    border-radius:.8rem;
+}
+
+.grid-calendarios {
+    display:grid;
+    grid-template-columns:repeat(2,1fr);
+    gap:1rem;
+}
+
+
+
+
+
+.btn-reservacion {
+    border: .1rem solid rgb(206 30 245);
+    padding: .5rem .8rem;
+    color: #fff;
+    background-color: rgb(206 30 245);
+}
+    .btn-reservacion:hover {
+        cursor: pointer;
+        color: rgb(206 30 245);
+        background-color:transparent;
+    }
